--- a/product-dev.yml
+++ b/product-dev.yml
@@ -9,7 +9,7 @@ spring:
   datasource:
     username: root
     password: root
-    url: jdbc:mysql://localhost:3306/pm111
+    url: jdbc:mysql:///pm111?characterEncoding=UTF-8
     driver-class-name: com.mysql.cj.jdbc.Driver
   rabbitmq:
     host: http://192.168.1.7:15672/
