--- a/order-dev.yml
+++ b/order-dev.yml
@@ -1,20 +1,20 @@
-# env: order-dev.yml
-# spring:
-#   datasource:
-#     username: root
-#     password: root
-#     url: jdbc:mysql:///pm111?characterEncoding=UTF-8
-#     driver-class-name: com.mysql.cj.jdbc.Driver
-#   rabbitmq:
-#     host: 192.168.1.7
-#     username: guest
-#     password: guest
-#     port: 5672
-#   application:
-#     name: order
-# server:
-#   port: 8082
-# PRODUCT:
-#   ribbon:
-#     NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
+dev: order-dev.yml
+spring:
+  datasource:
+    username: root
+    password: root
+    url: jdbc:mysql:///pm111?characterEncoding=UTF-8
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  rabbitmq:
+    host: 192.168.1.7
+    username: guest
+    password: guest
+    port: 5672
+  application:
+    name: order
+server:
+  port: 8082
+PRODUCT:
+  ribbon:
+    NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
 
