--- a/product-dev.yml
+++ b/product-dev.yml
@@ -1,16 +1,20 @@
-dev: product-dev.yml
-# spring:
-#   application:
-#     name: product
-#   datasource:
-#     username: root
-#     password: root
-#     url: jdbc:mysql:///pm111?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
-#     driver-class-name: com.mysql.cj.jdbc.Driver
-#   rabbitmq:
-#     host: http://192.168.1.7:15672/
-#     username: guest
-#     password: guest
-#     port: 5672
-# server:
-#   port: 8083
+dev: product-dev
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+spring:
+  application:
+    name: product
+  datasource:
+    username: root
+    password: root
+    url: jdbc:mysql:///pm111?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  rabbitmq:
+    host: http://192.168.1.7:15672/
+    username: guest
+    password: guest
+    port: 5672
+server:
+  port: 8083
