--- a/product-dev.yml
+++ b/product-dev.yml
@@ -12,7 +12,7 @@ spring:
     url: jdbc:mysql:///pm111?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
     driver-class-name: com.mysql.cj.jdbc.Driver
   rabbitmq:
-    host: http://192.168.1.7:15672/
+    host: http://192.168.1.7:15672/#/
     username: guest
     password: guest
     port: 5672
