--- a/order-dev.yml
+++ b/order-dev.yml
@@ -1,4 +1,4 @@
-env: order-dev55.yml
+env: order-dev.yml
 spring:
   datasource:
     username: root
@@ -6,7 +6,7 @@ spring:
     url: jdbc:mysql:///pm111?characterEncoding=UTF-8
     driver-class-name: com.mysql.cj.jdbc.Driver
   rabbitmq:
-    host: http://192.168.1.7:15672/#/
+    host: localhost
     username: guest
     password: guest
     port: 5672
